# -what_was_year_about

./: .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  LICENSE  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  VISUALIZATION_2026_FEATURES.md  VISUALIZATION_COMPARISON.md  app.py  explore_data.ipynb  feedback_log.txt  notes.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: pylint.yml
src/: app.py  app_gradio.py  app_gradio_demo.py  cache.py  config.py  credentials.py  dashboard.py  dashboard_nicegui.py  data_utils.py  exceptions.py  feedback.py  hello_panel.py  llm_implementation.py  load_data.py  models.py  panel_app_safe.py  prompt_templates.py  settings.py  test_dashboard.py  test_data_utils.py  test_llm.py  test_load_data.py  test_recommendations.py  theme.py  visuals.py
tests/: conftest.py  test_dashboard_contract.py
