[project]
name = "what_was_year_about"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "nicegui",
    "gspread",
    "pandas",
    "gradio",
    "plotly",
    "groq",
    "scikit-learn",
    "numpy>=2.3.4",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/what_was_year_about"]
